--- a/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
@@ -11,5 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Model"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="16dp"
+        android:visibility="gone" />
+
+    <!-- Refresh Button -->
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/refreshButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="40dp"-->
+<!--        android:contentDescription="@string/back"-->
+<!--        app:srcCompat="@drawable/restart"-->
+<!--        app:backgroundTint="@android:color/transparent"-->
+<!--        app:tint="@android:color/white"-->
+<!--        app:elevation="0dp"-->
+<!--        app:fabCustomSize="48dp"-->
+<!--        app:maxImageSize="50dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        app:borderWidth="0dp"-->
+<!--        app:rippleColor="@android:color/transparent"-->
+
+<!--        android:layout_gravity="bottom|end"-->
+<!--        />-->
 
 </FrameLayout>
