add refresh button for render

--- a/samples/ar-model-viewer/src/main/res/layout/activity.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity.xml
@@ -34,6 +34,25 @@
         app:borderWidth="0dp"
         app:rippleColor="@android:color/transparent" />
 
+    <!-- Refresh Button -->
+    <!-- Refresh Button -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/refreshButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/refresh"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="40dp"
+        app:rippleColor="@android:color/transparent"
+        app:srcCompat="@drawable/restart"
+        app:tint="@android:color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
