--- a/samples/ar-model-viewer/src/main/res/layout/activity.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity.xml
@@ -35,7 +35,6 @@
         app:rippleColor="@android:color/transparent" />
 
     <!-- Refresh Button -->
-    <!-- Refresh Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/refreshButton"
         android:layout_width="wrap_content"
@@ -53,6 +52,20 @@
         app:rippleColor="@android:color/transparent"
         app:srcCompat="@drawable/restart"
         app:tint="@android:color/white" />
+
+    <!-- Switch Button -->
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/refreshButton"
+        android:theme="@style/Theme.MaterialComponents.Light"
+        app:thumbTint="@android:color/white"
+        app:trackTint="@color/switch_track_color"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
