add recitation screen [Scan Page]

--- a/samples/ar-model-viewer/src/main/res/layout/activity.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity.xml
@@ -66,6 +66,18 @@
         app:thumbTint="@android:color/white"
         app:trackTint="@color/switch_track_color"/>
 
+    <TextView
+        android:id="@+id/modeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/switchButton"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:paddingStart="20dp"
+        android:layout_marginTop="8dp"
+        tools:ignore="MissingConstraints" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
