--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,24 +15,18 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
-    <!-- Capture Button -->
+    <com.google.ar.sceneform.samples.gltf.library.TextOverlay
+        android:id="@+id/textOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/captureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/refresh"
-        app:backgroundTint="@android:color/transparent"
-        app:borderWidth="0dp"
-        app:elevation="0dp"
-        app:fabCustomSize="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="40dp"
-        app:rippleColor="@android:color/transparent"
-        app:srcCompat="@drawable/camera"
-        app:tint="@android:color/white" />
+        android:backgroundTint="@color/transparent"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
