--- a/samples/ar-model-viewer/src/main/res/layout/activity.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity.xml
@@ -51,17 +51,20 @@
         app:maxImageSize="40dp"
         app:rippleColor="@android:color/transparent"
         app:srcCompat="@drawable/restart"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/white"
+
+        android:visibility="visible"
+        />
 
     <!-- Switch Button -->
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="80dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/refreshButton"
+        app:layout_constraintEnd_toEndOf="parent"
         android:theme="@style/Theme.MaterialComponents.Light"
         app:thumbTint="@android:color/white"
         app:trackTint="@color/switch_track_color"/>
