--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -29,4 +29,33 @@
         android:backgroundTint="@color/transparent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
+<!--    <Button-->
+<!--        android:id="@+id/resetButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Reset Camera"-->
+<!--        android:visibility="gone" />-->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fragmentRefreshButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/refresh"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="40dp"
+        app:rippleColor="@android:color/transparent"
+        app:srcCompat="@drawable/restart"
+        app:tint="@android:color/white"
+
+        android:layout_gravity="bottom|end"
+        android:visibility="visible"
+        />
+
 </FrameLayout>
