--- a/samples/ar-model-viewer/src/main/res/layout/activity_practice.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity_practice.xml
@@ -15,4 +15,10 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/resultsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp" />
+
 </LinearLayout>
