--- a/samples/ar-model-viewer/src/main/res/layout/activity_speech_recognition.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/activity_speech_recognition.xml
@@ -13,26 +13,11 @@
         android:gravity="center"
         android:textSize="18sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/startButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Start" />
-
-        <Button
-            android:id="@+id/stopButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Stop"
-            android:enabled="false" />
-
-    </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:text="Start Listening" />
 
 </LinearLayout>
