--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -29,13 +29,6 @@
         android:backgroundTint="@color/transparent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
-<!--    <Button-->
-<!--        android:id="@+id/resetButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Reset Camera"-->
-<!--        android:visibility="gone" />-->
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fragmentRefreshButton"
         android:layout_width="wrap_content"
@@ -53,9 +46,24 @@
         app:rippleColor="@android:color/transparent"
         app:srcCompat="@drawable/restart"
         app:tint="@android:color/white"
-
         android:layout_gravity="bottom|end"
-        android:visibility="visible"
-        />
+        android:visibility="visible" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/closeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:background="@android:color/transparent"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="48dp"
+        app:maxImageSize="24dp"
+        app:rippleColor="@android:color/transparent"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+        app:tint="@android:color/white"
+        android:visibility="gone" />
 
 </FrameLayout>
