--- a/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
+    <!-- Refresh Button -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/refreshButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/refresh"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="48dp"
+        app:maxImageSize="40dp"
+        app:rippleColor="@android:color/transparent"
+        app:srcCompat="@drawable/restart"
+        app:tint="@android:color/white"
+        android:visibility="visible" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -34,6 +51,25 @@
 
         android:layout_gravity="top|end"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/libraryBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/back"
+        app:srcCompat="@drawable/ic_arrow_back"
+        app:backgroundTint="@android:color/transparent"
+        app:tint="@android:color/white"
+        app:elevation="0dp"
+        app:fabCustomSize="48dp"
+        app:maxImageSize="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:rippleColor="@android:color/transparent" />
+
 
 
 </FrameLayout>
