--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -13,6 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         android:visibility="gone" />
 
     <com.google.ar.sceneform.samples.gltf.library.TextOverlay
@@ -26,28 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/transparent"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fragmentRefreshButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/refresh"
+        android:contentDescription="@string/capture"
         app:backgroundTint="@android:color/transparent"
-        app:borderWidth="0dp"
-        app:elevation="0dp"
-        app:fabCustomSize="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="40dp"
-        app:rippleColor="@android:color/transparent"
-        app:srcCompat="@drawable/restart"
-        app:tint="@android:color/white"
-        android:layout_gravity="bottom|end"
-        android:visibility="visible" />
+        app:borderWidth="3dp"
+        app:srcCompat="@drawable/camera"
+        app:tint="#FFD700" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/closeButton"
@@ -63,7 +47,7 @@
         app:maxImageSize="24dp"
         app:rippleColor="@android:color/transparent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-        app:tint="@android:color/white"
+        app:tint="@android:color/holo_red_dark"
         android:visibility="gone" />
 
 </FrameLayout>
