--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -16,15 +16,6 @@
         android:scaleType="centerCrop"
         android:visibility="gone" />
 
-<!--    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:indeterminate="false"
-        android:layout_gravity="center"
-        android:max="100" />-->
-
     <TextView
         android:id="@+id/recognizedTextView"
         android:layout_width="wrap_content"
@@ -33,6 +24,14 @@
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/resultsTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:padding="16dp"
+        android:visibility="gone" />
 
     <com.google.ar.sceneform.samples.gltf.library.TextOverlay
         android:id="@+id/textOverlay"
