--- a/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_recite.xml
@@ -25,13 +25,24 @@
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"/>
 
-    <TextView
-        android:id="@+id/resultsTextView"
+    <TableLayout
+        android:id="@+id/resultsTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_gravity="center"
         android:padding="16dp"
-        android:visibility="gone" />
+        android:visibility="gone">
+        <TableRow>
+            <TextView
+                android:text="Word"
+                android:textStyle="bold"
+                android:padding="8dp"/>
+            <TextView
+                android:text="Pronounced"
+                android:textStyle="bold"
+                android:padding="8dp"/>
+        </TableRow>
+    </TableLayout>
 
     <com.google.ar.sceneform.samples.gltf.library.TextOverlay
         android:id="@+id/textOverlay"
