--- a/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".library.Activity">
 
     <androidx.fragment.app.FragmentContainerView
@@ -70,11 +70,13 @@
         app:rippleColor="@android:color/transparent" />
 
     <!-- Magnifying Glass Button -->
-    <Button
+    <ImageButton
         android:id="@+id/magnifyingGlassButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hold to Show Magnifying Glass"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/premium_button_background"
+        android:src="@drawable/search"
+        />
 </FrameLayout>
