--- a/samples/ar-model-viewer/src/main/res/drawable/premium_button_background.xml
+++ b/samples/ar-model-viewer/src/main/res/drawable/premium_button_background.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="#FF5722" />
+            <solid android:color="#FF6200EE" />
             <corners android:radius="16dp" />
             <padding android:left="16dp" android:top="16dp" android:right="16dp" android:bottom="16dp" />
         </shape>
@@ -9,8 +9,8 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#61378C"
-                android:endColor="#61378C"
+                android:startColor="#FF6200EE"
+                android:endColor="#FF6200EE"
                 android:angle="45" />
             <corners android:radius="16dp" />
             <padding android:left="16dp" android:top="16dp" android:right="16dp" android:bottom="16dp" />
