--- a/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
@@ -94,4 +94,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent" />
+
+    <!-- the video description -->
+    <Button
+        android:id="@+id/watchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Watch"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="24dp"
+        android:visibility="gone"/>
+
+    <include layout="@layout/view_video_overlay" />
+
 </FrameLayout>
