--- a/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/fragment_main.xml
@@ -96,14 +96,22 @@
         android:background="@android:color/transparent" />
 
     <!-- the video description -->
-    <Button
+    <ImageButton
         android:id="@+id/watchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Watch"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_gravity="bottom|center"
-        android:layout_margin="24dp"
-        android:visibility="gone"/>
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/premium_button_background"
+        android:src="@drawable/play"
+        android:scaleType="centerInside"
+        android:padding="8dp"
+        app:tint="@android:color/white"
+        android:visibility="gone" />
+
+
+
+
 
     <include layout="@layout/view_video_overlay" />
 
