feat(ar-lens): fix minimize and maximize screen for video description

--- a/samples/ar-model-viewer/src/main/res/layout/view_video_overlay.xml
+++ b/samples/ar-model-viewer/src/main/res/layout/view_video_overlay.xml
@@ -3,21 +3,41 @@
     android:id="@+id/videoOverlayContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:background="#80000000"
-    android:clickable="true">
+    android:background="#CC000000"
+    android:visibility="gone">
 
-    <androidx.media3.ui.PlayerView
-        android:id="@+id/playerView"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center" />
+    <!-- Centered video and fullscreen button -->
+    <FrameLayout
+        android:id="@+id/playerContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
+        <!-- PlayerView always goes first -->
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/playerView"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center" />
+
+        <!-- Fullscreen toggle floats on top -->
+        <ImageButton
+            android:id="@+id/fullscreenToggle"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="top|end"
+            android:layout_margin="4dp"
+            android:background="#CC000000"
+            android:src="@drawable/fullscreen"
+            app:tint="@android:color/white" />
+    </FrameLayout>
+
+    <!-- Bottom Close Button -->
     <ImageButton
         android:id="@+id/closeButton"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_gravity="bottom|center"
+        android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="16dp"
         android:src="@drawable/close"
         android:scaleType="centerInside"
@@ -25,7 +45,4 @@
         android:background="@drawable/red_button_background"
         android:visibility="gone"
         app:tint="@android:color/white" />
-
-
-
 </FrameLayout>
